Fix background on mobile header

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,6 +2,7 @@
 
 header {
   background: url('../images/brand/2024/header-2.png') left top/60%;
+  background-color: $main-background;
   padding: 10px 15px 0px 15px;
 }
 
